Assign Shortcut doesn't work for POSE>Animation>Clear Keyframes #79571

Closed
opened 2020-08-05 22:13:37 +02:00 by Pierre Schiller · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX TITAN X/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83.4, 2.91 date: 2020-08-07
Worked: N/a

Short description of error
This problem also happens in 2.91.
The right click>assign a custom shortcut to Clear animation from the selected object. It will get listed in the shortcuts, but it will not work.

Exact steps for others to reproduce the error

  • Create an armature bone.
  • Extrude or subdivide twice.
  • In pose mode rotate the 2 end bones and add a keyframe.
  • "assign shortcut" to Pose menu>Animation>Clear Keyframes... (use CTRL+SHIFT+K).
    It will not say it is assigned, and it will not work. It is, however, assigned in the keymap navigation.

102.png

101.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX TITAN X/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83.4, 2.91 date: 2020-08-07 Worked: N/a **Short description of error** This problem also happens in 2.91. The right click>assign a custom shortcut to Clear animation from the selected object. It will get listed in the shortcuts, but it will not work. **Exact steps for others to reproduce the error** - Create an armature bone. - Extrude or subdivide twice. - In pose mode rotate the 2 end bones and add a keyframe. - "assign shortcut" to Pose menu>Animation>Clear Keyframes... (use CTRL+SHIFT+K). It will not say it is assigned, and it will not work. It is, however, assigned in the keymap navigation. ![102.png](https://archive.blender.org/developer/F8749731/102.png) ![101.png](https://archive.blender.org/developer/F8749729/101.png)

Added subscriber: @PierreSchiller

Added subscriber: @PierreSchiller

Added subscriber: @iss

Added subscriber: @iss

Shortcut does work but it is defined in animation section not in 3D viewport. So it works in dopesheet for example.

To make it work in 3D viewport you can define it manually in keymap > 3D View > Pose > Pose(Global)

I don't know exactly how new keymap item gets its category, so I am not sure if this is bug.

Shortcut does work but it is defined in animation section not in 3D viewport. So it works in dopesheet for example. To make it work in 3D viewport you can define it manually in keymap > 3D View > Pose > Pose(Global) I don't know exactly how new keymap item gets its category, so I am not sure if this is bug.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

The context and keymap is obtained from WM_keymap_guess_opname through the name of the operator.
But this case is strange, it seems that the km should be another one.
This looks like a bug in my opinion.

The context and keymap is obtained from `WM_keymap_guess_opname` through the name of the operator. But this case is strange, it seems that the `km` should be another one. This looks like a bug in my opinion.

This issue was referenced by 17dbdcc552

This issue was referenced by 17dbdcc552bfb96441a8fd3c57a4787378e5a549
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Julian Eisel self-assigned this 2020-08-07 16:11:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79571
No description provided.