Fix T79571: "Assign Shortcut" doesn't work for "Clear Keyframes"

In the 3D View, the "Animation" keymap is not used, but the mode
specific ones. So the shortcut editing code should use these too, just
like the default keymap does.